
[project]
name = "abletron"
version = "0.0.1"
description = "library organization tool for Ableton Live 11"
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "click>=8.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-v3-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
