
[project]
name = "abletron"
version = "0.0.1"
description = "library organization tool for Ableton Live 11"
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "textual>=0.27.0",
    "textual-fspicker>=0.0.9",
    "tinydb>=4.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-v3-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "sourcery>=1.3.0",
    "textual[dev]>=0.27.0",
    "black>=23.3.0",
]
